fix(usercss): Fix z-index of youtube ask
We didn't apply z-index on correct element (root of stacking context),
leading to wonky mixing of layering.

--- a/usercss/youtube-ask.com.user.css
+++ b/usercss/youtube-ask.com.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Youtube ask
 @namespace      ipwnponies
-@version        1.1.0
+@version        1.1.1
 @description    Make the ask panel a full-screen modal
 ==/UserStyle== */
 
@@ -15,16 +15,13 @@
         top: 10vh;
         opacity: 80%;
         transition-duration: 1s;
+        z-index: 100;
     }
 
     #panels:hover {
         opacity: 100%;
         transition-duration: 0.5s;
 
-    }
-
-    #secondary {
-        z-index: 1000
     }
 
     /* This is the ask panel, make it full height */
